# sourceforts-server

./: BUILD  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  entrypoint.sh  metamod.vdf  repos.bzl  server.cfg
.github/workflows/: build.yml  publish.yml
